--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -3,25 +3,39 @@ body {
   font-family: sans-serif;
 }
 
+.title, .button-container {
+  margin-top: 8px;
+}
+
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px
 }
 
 .title {
   background: #e3f4ff;
+  padding: 10px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px ;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 8px;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 8px auto;
+  padding: 8px 24px;
 }
