--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,7 +10,26 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
+
+
+/* ssholutiong ------------- */
+.container {
+  display: flex;
+  margin-top: 32px;
+  gap: 52px;
+  justify-content: center;
+}
+
+
+
+.items {
+  width: 200px;
+  text-align: center;
+}
+/* ssholutiong --------------- */
+
 
 /* do not edit this footer */
 .footer {
