--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 10px 15px;
+  
+  
 }
 
 .icon {
@@ -51,6 +54,7 @@ body {
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  margin-top: 10px;
 }
 
 button.continue {
@@ -64,3 +68,39 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
+/* Sahlutiong -------------- */
+.modal {
+  display: flex;
+  padding: 20px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+
+.container {
+  margin-left: 13px;
+}
+
+.header {
+  display: flex;
+  font-weight: bold;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.text {
+  margin-top: 7px;
+}
+
+
+
+
+
+
+
+
+/* Sahlutiong -------------- */
