--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -1,13 +1,19 @@
 body, html {
   height: 100%;
   margin: 0;
+  background-color: grey;
 }
 
 .container {
+  width: 100%;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template: 100px 100px 500px 100px / 300px 900px;
+   /*rows-columns */
+  gap: 10px;
 }
 
 .container div {
@@ -21,10 +27,12 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2 / 5;
 }
 
 .nav {
@@ -33,6 +41,7 @@ body, html {
 
 .article {
   background-color: #bccbde;
+  grid-row: 3 / 5;
 }
 
 .article p {
@@ -44,4 +53,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
