--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -1,6 +1,7 @@
 body, html {
   height: 100%;
   margin: 0;
+  background-color: grey;
 }
 
 .container {
@@ -8,6 +9,11 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  gap: 15px;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr ;
+  
 }
 
 .container div {
